--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Javanonetbens/target/
+/projetovitorias/nbproject/private/
+/projetovitorias (cópia 1)/nbproject/private/
+/projetovitoriacabral/nbproject/private/
